# drone-automation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bash/: auto.sh  requirement.sh  seq_controller.sh
catkin_ws/.catkin_tools/profiles/default/: config.yaml
catkin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_ws/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/src/control_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/control_pkg/include/: control_lib.cpp  control_lib.h
catkin_ws/src/control_pkg/src/: log.cpp  peripherals.cpp
catkin_ws/src/nodelet_loader/: CMakeLists.txt  package.xml
catkin_ws/src/nodelet_loader/src/: nodelet_loader.cpp
include/: UTM.h  drone-automation-lib.cpp  drone-automation-lib.h  mission_v1.cpp  mission_v1.h  mqtt-lib.cpp  mqtt-lib.h
src/: cleaner.cpp  mid-man.cpp
temp/: async_consume.cpp  async_publish.cpp  test.cpp  test_lib_a_c.cpp  test_lib_a_p.cpp
