<?xml version="1.0"?>
<package>
  <name>nodelet_loader</name>
  <version>0.0.0</version>
  <description>The nodelet_loader</description>

  <maintainer email="fmascarich@nevada.unr.edu">frank</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>

</package>
